{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 553,
  "lineage": "ac2f07f9-81ca-9a40-81f9-aae2c6f8f6c7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ecomc_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:219049722040:loadbalancer/app/ecomc-alb/10d7de34a856f344",
            "arn_suffix": "app/ecomc-alb/10d7de34a856f344",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecomc-alb-1891285287.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:219049722040:loadbalancer/app/ecomc-alb/10d7de34a856f344",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecomc-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c6faa6669c17f84f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-074b63524b1954a9b"
              },
              {
                "subnet_id": "subnet-087c6e349b9907f55"
              }
            ],
            "subnets": [
              "subnet-074b63524b1954a9b",
              "subnet-087c6e349b9907f55"
            ],
            "vpc_id": "vpc-09df5189139e9cbce",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.ecomc_pub_sub_1",
            "aws_subnet.ecomc_pub_sub_2",
            "aws_vpc.ecomc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:219049722040:listener/app/ecomc-alb/10d7de34a856f344/4bcfedb414f2b033",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:219049722040:targetgroup/ecomc-tg/a99f039ced251db4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:219049722040:listener/app/ecomc-alb/10d7de34a856f344/4bcfedb414f2b033",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:219049722040:loadbalancer/app/ecomc-alb/10d7de34a856f344",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.ecomc_alb",
            "aws_alb_target_group.ecomc_tg",
            "aws_security_group.lb",
            "aws_subnet.ecomc_pub_sub_1",
            "aws_subnet.ecomc_pub_sub_2",
            "aws_vpc.ecomc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecomc_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:219049722040:targetgroup/ecomc-tg/a99f039ced251db4",
            "arn_suffix": "targetgroup/ecomc-tg/a99f039ced251db4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:219049722040:targetgroup/ecomc-tg/a99f039ced251db4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecomc-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09df5189139e9cbce"
          },
          "dependencies": [
            "aws_vpc.ecomc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecomc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:219049722040:internet-gateway/igw-0459a384a58e0b694",
            "id": "igw-0459a384a58e0b694",
            "owner_id": "219049722040",
            "tags": {
              "Name": "ecomc-igw"
            },
            "tags_all": {
              "Name": "ecomc-igw"
            },
            "vpc_id": "vpc-09df5189139e9cbce"
          },
          "dependencies": [
            "aws_vpc.ecomc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ecomc_pub_route_table_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0459a384a58e0b694",
            "id": "r-rtb-094f8bf33d1ac68361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-094f8bf33d1ac6836",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ecomc_igw",
            "aws_route_table.ecomc_pub_route_table",
            "aws_vpc.ecomc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecomc_pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:219049722040:route-table/rtb-094f8bf33d1ac6836",
            "id": "rtb-094f8bf33d1ac6836",
            "owner_id": "219049722040",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ecomc-route-table"
            },
            "tags_all": {
              "Name": "ecomc-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09df5189139e9cbce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecomc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecomc_pub-route-table-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b098153da419f6b",
            "route_table_id": "rtb-094f8bf33d1ac6836",
            "subnet_id": "subnet-087c6e349b9907f55"
          },
          "dependencies": [
            "aws_route_table.ecomc_pub_route_table",
            "aws_subnet.ecomc_pub_sub_1",
            "aws_vpc.ecomc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecomc_pub-route-table-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0913d5eb07d4821c0",
            "route_table_id": "rtb-094f8bf33d1ac6836",
            "subnet_id": "subnet-074b63524b1954a9b"
          },
          "dependencies": [
            "aws_route_table.ecomc_pub_route_table",
            "aws_subnet.ecomc_pub_sub_2",
            "aws_vpc.ecomc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:219049722040:security-group/sg-018cf67fee793fb1b",
            "description": "allow inbound access from the alb only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018cf67fee793fb1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecomc-sg",
            "name_prefix": "",
            "owner_id": "219049722040",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09df5189139e9cbce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecomc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:219049722040:security-group/sg-0c6faa6669c17f84f",
            "description": "controls access to the alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6faa6669c17f84f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecomc-lb-sg",
            "name_prefix": "",
            "owner_id": "219049722040",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09df5189139e9cbce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecomc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecomc_pub_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:219049722040:subnet/subnet-087c6e349b9907f55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087c6e349b9907f55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "219049722040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecomc-pub-sub-1"
            },
            "tags_all": {
              "Name": "ecomc-pub-sub-1"
            },
            "vpc_id": "vpc-09df5189139e9cbce"
          },
          "dependencies": [
            "aws_vpc.ecomc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecomc_pub_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:219049722040:subnet/subnet-074b63524b1954a9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074b63524b1954a9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "219049722040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecomc-pub-sub-2"
            },
            "tags_all": {
              "Name": "ecomc-pub-sub-2"
            },
            "vpc_id": "vpc-09df5189139e9cbce"
          },
          "dependencies": [
            "aws_vpc.ecomc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecomc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:219049722040:vpc/vpc-09df5189139e9cbce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aae1cb1ccf8aa0c8",
            "default_route_table_id": "rtb-08fd4d5aacb250c8a",
            "default_security_group_id": "sg-02e9f181fd11c556f",
            "dhcp_options_id": "dopt-090b88c87d1e65c3f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09df5189139e9cbce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08fd4d5aacb250c8a",
            "owner_id": "219049722040",
            "tags": {
              "Name": "ecomc-vpc"
            },
            "tags_all": {
              "Name": "ecomc-vpc"
            }
          }
        }
      ]
    }
  ]
}